Fixed hamburger menu being visible on larger screens

--- a/index.css
+++ b/index.css
@@ -203,7 +203,7 @@ body {
         max-width: 370px;
     }
 
-    #openMenu {
+    #openMenuButton {
         display: none;
     }
 
